// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupContentMenu renders as groupProfile when I am the owner 1`] = `
<div>
  <v-popover-stub
    autohide="true"
    class="group-content-menu"
    container="body"
    delay="0"
    handleresize="true"
    offset="5"
    openclass="open"
    opengroup="0"
    placement="bottom-end"
    popoverarrowclass="tooltip-arrow popover-arrow"
    popoverbaseclass="tooltip popover"
    popoverclass="vue-popover-theme"
    popoverinnerclass="tooltip-inner popover-inner"
    popoverwrapperclass="wrapper"
    popperoptions="[object Object]"
    trigger="manual"
  >
    <button
      aria-label="group.contentMenu.menuButton"
      class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[26px] min-w-[26px] text-[12px] leading-[normal] tracking-[0.6px] overflow-hidden whitespace-nowrap align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[26px]"
      data-appearance="outline"
      data-test="group-menu-button"
      data-variant="primary"
      type="button"
    >
      <span
        class="inline-flex items-center"
      >
        <span
          class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
        >
          <span
            aria-hidden="true"
            class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 6c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 14c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 22c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2z"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
     
    <div>
      <div
        class="group-menu-popover"
      >
        <nav
          class="ds-menu"
        >
          <ul
            class="ds-menu-list"
          >
            
          
          
            <li
              class="ds-menu-item ds-menu-item-level-0"
            >
              <a
                class="ds-menu-item-link"
                exact="true"
                href="/"
              >
                <span
                  aria-hidden="true"
                  class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                >
                  <svg
                    fill="currentColor"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15 4.594v22.813l-1.719-1.688-4.719-4.719h-4.563v-10h4.563l4.719-4.719zM13 9.438l-3.281 3.281-0.313 0.281h-3.406v6h3.406l0.313 0.281 3.281 3.281v-13.125zM20.219 11.781l2.781 2.781 2.781-2.781 1.438 1.438-2.781 2.781 2.781 2.781-1.438 1.438-2.781-2.781-2.781 2.781-1.438-1.438 2.781-2.781-2.781-2.781z"
                    />
                  </svg>
                </span>
                
            group.contentMenu.muteGroup
          
              </a>
              <!---->
            </li>
            
          
          
            <li
              class="ds-menu-item ds-menu-item-level-0"
            >
              <a
                class="ds-menu-item-link"
                href="/groups/edit/groupid"
              >
                <span
                  aria-hidden="true"
                  class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                >
                  <svg
                    fill="currentColor"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M25 4.031c0.765 0 1.517 0.298 2.094 0.875 1.154 1.154 1.154 3.034 0 4.188l-10.094 10.125-0.313 0.063-3.5 0.688-1.469 0.313 0.313-1.469 0.688-3.5 0.063-0.313 0.219-0.219 9.906-9.875c0.577-0.577 1.329-0.875 2.094-0.875zM25 5.969c-0.235 0-0.464 0.121-0.688 0.344l-9.688 9.688-0.344 1.719 1.719-0.344 9.688-9.688c0.446-0.446 0.446-0.929 0-1.375-0.223-0.223-0.453-0.344-0.688-0.344zM4 8h13.188l-2 2h-9.188v16h16v-9.188l2-2v13.188h-20v-20z"
                    />
                  </svg>
                </span>
                
            admin.settings.name
          
              </a>
              <!---->
            </li>
            
          
          
            <li
              class="ds-menu-item ds-menu-item-level-0"
            >
              <a
                class="ds-menu-item-link"
                href="/groups/edit/groupid/invites"
              >
                <span
                  aria-hidden="true"
                  class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                >
                  <svg
                    fill="currentColor"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.75 4c1.671 0 3.225 0.661 4.406 1.844s1.844 2.735 1.844 4.406-0.662 3.255-1.844 4.438l-1.469 1.469c-1.181 1.183-2.766 1.844-4.438 1.844-0.793 0-1.565-0.153-2.281-0.438l1.625-1.625c0.215 0.038 0.432 0.063 0.656 0.063 1.138 0 2.226-0.445 3.031-1.25l1.469-1.469c1.66-1.66 1.66-4.372 0-6.031-0.804-0.805-1.863-1.25-3-1.25s-2.227 0.444-3.031 1.25l-1.469 1.469c-0.997 0.996-1.391 2.393-1.188 3.688l-1.625 1.625c-0.285-0.716-0.438-1.487-0.438-2.281 0-1.671 0.662-3.255 1.844-4.438l1.469-1.469c1.181-1.183 2.766-1.844 4.438-1.844zM19.281 11.281l1.438 1.438-8 8-1.438-1.438zM11.75 14c0.793 0 1.565 0.153 2.281 0.438l-1.625 1.625c-0.215-0.038-0.432-0.063-0.656-0.063-1.138 0-2.226 0.445-3.031 1.25l-1.469 1.469c-1.66 1.66-1.66 4.372 0 6.031 0.804 0.805 1.863 1.25 3 1.25s2.227-0.444 3.031-1.25l1.469-1.469c0.997-0.996 1.391-2.393 1.188-3.688l1.625-1.625c0.285 0.716 0.438 1.487 0.438 2.281 0 1.671-0.662 3.256-1.844 4.438l-1.469 1.469c-1.181 1.183-2.766 1.844-4.438 1.844s-3.225-0.661-4.406-1.844c-1.182-1.182-1.844-2.735-1.844-4.406s0.662-3.256 1.844-4.438l1.469-1.469c1.181-1.183 2.766-1.844 4.438-1.844z"
                    />
                  </svg>
                </span>
                
            group.contentMenu.inviteLinks
          
              </a>
              <!---->
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </v-popover-stub>
</div>
`;

exports[`GroupContentMenu renders as groupProfile, muted 1`] = `
<div>
  <v-popover-stub
    autohide="true"
    class="group-content-menu"
    container="body"
    delay="0"
    handleresize="true"
    offset="5"
    openclass="open"
    opengroup="0"
    placement="bottom-end"
    popoverarrowclass="tooltip-arrow popover-arrow"
    popoverbaseclass="tooltip popover"
    popoverclass="vue-popover-theme"
    popoverinnerclass="tooltip-inner popover-inner"
    popoverwrapperclass="wrapper"
    popperoptions="[object Object]"
    trigger="manual"
  >
    <button
      aria-label="group.contentMenu.menuButton"
      class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[26px] min-w-[26px] text-[12px] leading-[normal] tracking-[0.6px] overflow-hidden whitespace-nowrap align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[26px]"
      data-appearance="outline"
      data-test="group-menu-button"
      data-variant="primary"
      type="button"
    >
      <span
        class="inline-flex items-center"
      >
        <span
          class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
        >
          <span
            aria-hidden="true"
            class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 6c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 14c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 22c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2z"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
     
    <div>
      <div
        class="group-menu-popover"
      >
        <nav
          class="ds-menu"
        >
          <ul
            class="ds-menu-list"
          >
            
          
          
            <li
              class="ds-menu-item ds-menu-item-level-0"
            >
              <a
                class="ds-menu-item-link"
                exact="true"
                href="/"
              >
                <span
                  aria-hidden="true"
                  class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                >
                  <svg
                    fill="currentColor"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15 4.594v22.813l-1.719-1.688-4.719-4.719h-4.563v-10h4.563l4.719-4.719zM24.125 6.375c2.385 2.511 3.875 5.896 3.875 9.625s-1.49 7.113-3.875 9.625l-1.406-1.406c2.024-2.149 3.281-5.041 3.281-8.219s-1.257-6.071-3.281-8.219zM21.313 9.188c1.661 1.786 2.688 4.187 2.688 6.813s-1.026 5.026-2.688 6.813l-1.406-1.438c1.3-1.424 2.094-3.3 2.094-5.375s-0.794-3.952-2.094-5.375zM13 9.438l-3.281 3.281-0.313 0.281h-3.406v6h3.406l0.313 0.281 3.281 3.281v-13.125zM18.5 12.031c0.939 1.059 1.5 2.446 1.5 3.969s-0.561 2.91-1.5 3.969l-1.438-1.438c0.578-0.694 0.938-1.559 0.938-2.531s-0.36-1.837-0.938-2.531z"
                    />
                  </svg>
                </span>
                
            group.contentMenu.unmuteGroup
          
              </a>
              <!---->
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </v-popover-stub>
</div>
`;

exports[`GroupContentMenu renders as groupProfile, not muted 1`] = `
<div>
  <v-popover-stub
    autohide="true"
    class="group-content-menu"
    container="body"
    delay="0"
    handleresize="true"
    offset="5"
    openclass="open"
    opengroup="0"
    placement="bottom-end"
    popoverarrowclass="tooltip-arrow popover-arrow"
    popoverbaseclass="tooltip popover"
    popoverclass="vue-popover-theme"
    popoverinnerclass="tooltip-inner popover-inner"
    popoverwrapperclass="wrapper"
    popperoptions="[object Object]"
    trigger="manual"
  >
    <button
      aria-label="group.contentMenu.menuButton"
      class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[26px] min-w-[26px] text-[12px] leading-[normal] tracking-[0.6px] overflow-hidden whitespace-nowrap align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[26px]"
      data-appearance="outline"
      data-test="group-menu-button"
      data-variant="primary"
      type="button"
    >
      <span
        class="inline-flex items-center"
      >
        <span
          class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
        >
          <span
            aria-hidden="true"
            class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 6c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 14c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 22c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2z"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
     
    <div>
      <div
        class="group-menu-popover"
      >
        <nav
          class="ds-menu"
        >
          <ul
            class="ds-menu-list"
          >
            
          
          
            <li
              class="ds-menu-item ds-menu-item-level-0"
            >
              <a
                class="ds-menu-item-link"
                exact="true"
                href="/"
              >
                <span
                  aria-hidden="true"
                  class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                >
                  <svg
                    fill="currentColor"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15 4.594v22.813l-1.719-1.688-4.719-4.719h-4.563v-10h4.563l4.719-4.719zM13 9.438l-3.281 3.281-0.313 0.281h-3.406v6h3.406l0.313 0.281 3.281 3.281v-13.125zM20.219 11.781l2.781 2.781 2.781-2.781 1.438 1.438-2.781 2.781 2.781 2.781-1.438 1.438-2.781-2.781-2.781 2.781-1.438-1.438 2.781-2.781-2.781-2.781z"
                    />
                  </svg>
                </span>
                
            group.contentMenu.muteGroup
          
              </a>
              <!---->
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </v-popover-stub>
</div>
`;

exports[`GroupContentMenu renders as groupTeaser 1`] = `
<div>
  <v-popover-stub
    autohide="true"
    class="group-content-menu"
    container="body"
    delay="0"
    handleresize="true"
    offset="5"
    openclass="open"
    opengroup="0"
    placement="bottom-end"
    popoverarrowclass="tooltip-arrow popover-arrow"
    popoverbaseclass="tooltip popover"
    popoverclass="vue-popover-theme"
    popoverinnerclass="tooltip-inner popover-inner"
    popoverwrapperclass="wrapper"
    popperoptions="[object Object]"
    trigger="manual"
  >
    <button
      aria-label="group.contentMenu.menuButton"
      class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[26px] min-w-[26px] text-[12px] leading-[normal] tracking-[0.6px] overflow-hidden whitespace-nowrap align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[26px]"
      data-appearance="outline"
      data-test="group-menu-button"
      data-variant="primary"
      type="button"
    >
      <span
        class="inline-flex items-center"
      >
        <span
          class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
        >
          <span
            aria-hidden="true"
            class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 6c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 14c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 22c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2z"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
     
    <div>
      <div
        class="group-menu-popover"
      >
        <nav
          class="ds-menu"
        >
          <ul
            class="ds-menu-list"
          >
            
          
          
            <li
              class="ds-menu-item ds-menu-item-level-0"
            >
              <a
                class="ds-menu-item-link"
                href="/groups/groupid"
              >
                <span
                  aria-hidden="true"
                  class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                >
                  <svg
                    fill="currentColor"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 2.594l0.719 0.688 13 13-1.438 1.438-1.281-1.281v11.563h-9v-10h-4v10h-9v-11.563l-1.281 1.281-1.438-1.438 13-13zM16 5.438l-9 9v11.563h5v-10h8v10h5v-11.563z"
                    />
                  </svg>
                </span>
                
            group.contentMenu.visitGroupPage
          
              </a>
              <!---->
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </v-popover-stub>
</div>
`;
